# Atlas80EVO-Gazebo

atlas80evo/: CMakeLists.txt  package.xml
atlas80evo/config/: AGV_mux.yaml  arm_preset.yaml  atlasprofile.json  ekf_localization.yaml  fsm_state.yaml  joy_teleop.yaml  mcl_3dl.yaml  neonavigation.yaml  obstacle_detection_region.yaml  relocalize_pt.yaml  velocity_smoother.yaml
atlas80evo/launch/: 2d_lasers.launch  3d_laser.launch  basic.launch  extra.launch  hector_mapping.launch  keyboard_teleop.launch  localization.launch  navigation.launch  odometry.launch  pcd_map_2_2d_map.launch  playback.launch  pointcloud_to_laserscan.launch  save_map.launch  sensors.launch  slam_gmapping.launch  static_tf2.launch  twist_cmd_mux.launch  usb_cam.launch  velocity_smoother.launch
atlas80evo/maps/: 2d_psa_map.pgm  2d_psa_map.yaml  BLAM_shado_office.pcd  maze_world.pcd  maze_world.pgm  maze_world.yaml
atlas80evo/rviz/: 3d_to_2d_map_conversion.rviz  mcl_3dl.rviz  neonavigation_2d.rviz  neonavigation_3d.rviz  self_charging.rviz
atlas80evo/scripts/: bagfile_csv_converter.py  bagfiles_txt_converter.py  battery_timestamp_recorder.py  bumper_checker.py  lane_depart.py  lane_depart_.py  lane_departs (copy).py  launcher_imda.py  led_tester.py  path_2_json_converter.py  path_reverser.py  path_with_speed_visualizer.py  point_2_pathWV_generator.py  pointcloud_lost_checker.py  pointcloud_lost_checker_v2.py  relocalizer.py  remote_lifter.py  remote_suspend.py  start_pose_initializer.py  timestamp_checker.py  useful_pointcloud_checker.py
atlas80evo/traj/maze/: 1_HOME.path  A_1.path  CHARGE_HOME.path  HOME_A.path  HOME_CHARGE.path  rotate_HOME.path
atlas80evo_description/: CMakeLists.txt  package.xml
atlas80evo_description/launch/: description.launch
atlas80evo_description/urdf/: atlas80evo.urdf.xacro  led.urdf.xacro
atlas80evo_gazebo/: CMakeLists.txt  package.xml
atlas80evo_gazebo/config/: atlas80evo_control.yaml
atlas80evo_gazebo/launch/: atlas80evo_empty_world.launch  atlas80evo_maze_world.launch  spawn_atlas80evo.launch
atlas80evo_gazebo/rviz/: model.rviz
atlas80evo_msgs/: CMakeLists.txt  package.xml
atlas80evo_msgs/msg/: FSMState.msg
atlas80evo_msgs/srv/: SetFileLocation.srv  SetFindTable.srv  SetLeaveTable.srv  SetONOFF.srv
battery_monitoring/launch/: v36_battery_monitoring.launch  v36_battery_monitoring_v1_2.launch  v36_battery_monitoring_v1_3.launch  v36_battery_monitoring_v1_4.launch  v36_battery_monitoring_v2_1.launch  v36_battery_monitoring_v2_2.launch
battery_monitoring/scripts/: battery_monitoring.py  battery_simulator.py  v36_battery_monitoring.py  v36_battery_monitoring_v2_1.py  v48_battery_monitoring.py
f710_teleop/launch/: f710_teleop.launch
f710_teleop/scripts/: manual_only_joy_teleop.py
fsm/: CMakeLists.txt  package.xml
fsm/config/: default.yaml
fsm/launch/: fsm_node.launch
fsm/scripts/: fsm_node.py
gyro_odometry/: CMakeLists.txt  package.xml
gyro_odometry/launch/: gyro_odom.launch
gyro_odometry/src/: xsens_gyro_odometry.cpp
health_monitoring/: CMakeLists.txt  package.xml
health_monitoring/launch/: health_monitoring.launch  health_monitoring_v3.launch  health_monitoring_v4.launch  health_monitoring_v5.launch  health_monitoring_v6.launch  health_monitoring_v7.launch  health_monitoring_v8.launch  health_monitoring_v8_1.launch  health_monitoring_v8_2.launch  health_monitoring_v8_3.launch  health_monitoring_v9.launch  health_monitoring_v9_1.launch  health_monitoring_v9_2.launch
health_monitoring/scripts/: health_monitoring.py  health_monitoring_v2.py  health_monitoring_v3.py  health_monitoring_v4.py  health_monitoring_v5.py  health_monitoring_v6.py  health_monitoring_v7.py  health_monitoring_v8.py  health_monitoring_v8_1.py  health_monitoring_v8_2.py  health_monitoring_v8_3.py  health_monitoring_v9_1.py  health_monitoring_v9_2.py
health_monitoring/srv/: ServiceExample.srv
imu_3dm_gx3/src/: imu_3dm_gx3.cc
ira_laser_tools/: CMakeLists.txt  package.xml
ira_laser_tools/src/: filtered_pointcloud_transform.cpp  fov_narrower.cpp  laserscan_multi_merger.cpp  pointcloud_transform.cpp  tf2_laserscan_multi_merger.cpp
led_gazebo_plugin/: CMakeLists.txt  package.xml
led_gazebo_plugin/src/: LightVisualPlugin.cc  RosFlashLightPlugin.cc
led_handler/: CMakeLists.txt  package.xml
led_handler/scripts/: led_handler.py  led_handler_v2.py
lifter_handler/: CMakeLists.txt  package.xml
lifter_handler/scripts/: lifter_handler.py
line_detection/: CMakeLists.txt  package.xml  typescript
line_detection/script/: lane_departure.py  lane_nn.py  un_white.xml
low_level_handler/: CMakeLists.txt  package.xml
low_level_handler/scripts/: low_level_decoder.py  low_level_handler.py
low_level_handler/src/: lifter_only.cpp  low_level_handler.cpp
manual_override/: CMakeLists.txt  package.xml
manual_override/scripts/: manual_override.py  manual_override_v2.py  manual_override_v3.py
mcl_3dl/: CMakeLists.txt
mcl_3dl/src/: mcl_3dl.cpp  modified_mcl_3dl.cpp
navigation_master/launch/: navigation_master_v1_1.launch  navigation_master_v1_2.launch  navigation_master_v1_3.launch  navigation_master_v1_4.launch  navigation_master_v1_5.launch  navigation_master_v1_6.launch  navigation_master_v1_7.launch  navigation_master_v1_8.launch  navigation_master_v1_9.launch  picking_table.launch
navigation_master/scripts/: action_charging.py  action_charging_v2.py  action_charging_v2_2.py  action_charging_v2_3.py  action_dropoff_table.py  action_dropoff_table_v2.py  action_dropoff_table_v2_3.py  action_pickup_table.py  action_pickup_table_v2.py  action_pickup_table_v2_3.py  navigation_master_v1_1.py  navigation_master_v1_10.py  navigation_master_v1_2.py  navigation_master_v1_3.py  navigation_master_v1_3_2.py  navigation_master_v1_4.py  (+5 more)
rosbag_recording/: CMakeLists.txt  package.xml
screenshot/: CMakeLists.txt  package.xml
snapshot/: CMakeLists.txt  package.xml
snapshot/scripts/: snapshot_service.py  snapshot_v2.py
sound_player/: CMakeLists.txt  package.xml
sound_player/scripts/: sound_player.py
udev/: roboteq_sbl2360.rules  turktronic.rules
(+151 files in other folders)
