<?xml version="1.0"?>
<package format="2">
  <name>atlas80evo</name>
  <version>0.0.0</version>
  <description>The atlas80evo package</description>



  <maintainer email="kienho91@gmail.com">Samuel</maintainer>



  <license>TODO</license>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>

  <exec_depend>rospy</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
