<?xml version="1.0"?>
<package format="2">
  <name>fsm</name>
  <version>0.0.0</version>
  <description>The fsm package</description>


  <maintainer email="samuel@shadoev.com">samuel</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>atlas80evo_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>atlas80evo_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
