<?xml version="1.0"?>
<package format="2">
  <name>manual_override</name>
  <version>0.0.0</version>
  <description>The manual_override package</description>


  <maintainer email="samuel@shadoev.com">samuel</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
