<?xml version="1.0"?>
<package format="2">
  <name>snapshot</name>
  <version>0.0.0</version>
  <description>The snapshot package</description>


  <maintainer email="samuel@shadoev.com">samuel</maintainer>
  <maintainer email="xwinal@gmail.com">winal</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
