<?xml version="1.0"?>
<package format="2">
  <name>sound_player</name>
  <version>0.0.0</version>
  <description>The sound_player package</description>


  <maintainer email="samuel@shadoev.com">samuel</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
